--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Byway</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Byway – Your learning and management platform." />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <meta name="theme-color" content="#ffffff" />
+
+    <meta property="og:title" content="Byway" />
+    <meta property="og:description" content="Byway – Your learning and management platform." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://byway.acusdev.com" />
+    <meta property="og:image" content="/cover.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Byway" />
+    <meta name="twitter:description" content="Byway – Your learning and management platform." />
+    <meta name="twitter:image" content="/cover.png" />
+
+    <meta name="keywords" content="Byway, LMS, learning, management, education" />
+    <meta name="author" content="Byway" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
