Phuc | Add code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <title>Byway</title>
     <meta name="description" content="Byway – Your learning and management platform." />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
